--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,51 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.xdty.media</groupId>
+            <artifactId>mediaplayer</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.xdty.media</groupId>
+            <artifactId>mediaplayer</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.xdty.media</groupId>
+            <artifactId>mediaplayer</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>im.ene.toro2</groupId>
+            <artifactId>toro-ext-mediaplayer</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.xdty.media</groupId>
+            <artifactId>mediaplayer</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>im.ene.toro2</groupId>
+            <artifactId>toro-ext-mediaplayer</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.conviva.sdk</groupId>
+            <artifactId>conviva-mediaplayer-sdk</artifactId>
+            <version>2.145.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.gitee.chinasoft_ohos</groupId>
+            <artifactId>mediaplayer</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.xdty.media</groupId>
+            <artifactId>mediaplayer</artifactId>
+            <version>0.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
