--- a/pom.xml
+++ b/pom.xml
@@ -121,7 +121,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.pdproject/com.example.pdproject.HelloApplication</mainClass>
+                            <mainClass>com.example.pdproject/com.main.Game.JavaFXLauncher</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
